@@ -1,3 +1,8 @@
+2005-08-16  Mark Kettenis  <kettenis@gnu.org>
+
+	* ppc-sysv-tdep.c (ppc_sysv_abi_push_dummy_call): Set condition
+	register appropriately for varargs functions.
+
 2005-08-15  Kevin Buettner  <kevinb@redhat.com>
 
 	* MAINTAINERS (ms1): New target ISA entry.  List myself as
